# DescriptorsTest

./: .gitignore  CMakeLists.txt  Cloudject.hpp  Cloudject.old.hpp  CloudjectModel.hpp  CloudjectModel.old.hpp  CvPartition.hpp  README.md  descriptors_test.cpp  descriptors_test.old.cpp  descriptors_test.old.old.cpp  invokations.txt  invokations2.txt  xtio.cpp  xtio.h  xtlcommon.cpp  xtlcommon.h  xtmath.cpp  xtmath.h  xtvalidation.cpp  xtvalidation.h
results/: analyze.m  gauss.asv  gauss.m  predictions.txt  predictions_pfhrgb.txt  predictions_prej.txt  results - Copy.txt  summary.txt  summary_pfhrgb.txt  summary_prej.txt
results - Copy/: analyze.asv  predictions_euclidean.txt  predictions_prej_fine.mat  predictions_prej_fine.txt  results.bak.txt  results.txt  summary_euclidean.txt  summary_prej_fine.txt
